[gd_scene load_steps=11 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://textures/entities.png" type="Texture" id=2]
[ext_resource path="res://scripts/title.gd" type="Script" id=3]
[ext_resource path="res://textures/tile_base.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "open_game"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("main_page/anim_objects/Player_right:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.3, 1.7, 2.5, 2.6, 3.5, 3.8, 3.9, 4.6, 4.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1240, 536 ), Vector2( 960, 200 ), Vector2( 900, 150 ), Vector2( 512, 472 ), Vector2( 544, 472 ), Vector2( 544, 472 ), Vector2( 512, 472 ), Vector2( -64, 472 ), Vector2( -64, -128 ), Vector2( 640, -128 ), Vector2( 640, -128 ), Vector2( 640, 472 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("main_page/anim_objects/Player_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 0.9, 1.3, 1.7, 2.5, 2.6, 2.65, 2.7, 2.75, 2.8, 2.85, 2.9, 2.95, 3, 3.05, 3.1, 3.15, 3.2, 3.25, 3.3, 3.35, 3.4, 3.45, 3.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -360.0, -345.0, -285.0, -360.0, -360.0, -345.0, -360.0, -375.0, -360.0, -345.0, -360.0, -375.0, -360.0, -345.0, -360.0, -375.0, -360.0, -345.0, -360.0, -375.0, -360.0, -360.0, -375.0, -360.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("main_page/anim_objects/Player_right:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.8, 1.9, 2.3, 2.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, 16 ), Vector2( 16, 16 ), Vector2( -16, 16 ), Vector2( -16, 16 ), Vector2( 16, 16 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("main_page/Label:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 3.5, 3.7, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1408, 448 ), Vector2( 1408, 448 ), Vector2( 256, 448 ), Vector2( 256, 448 ), Vector2( 256, 75 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("main_page/Button:rect_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3.9, 4.05, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 4.5, 4.5 ), Vector2( 3, 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("main_page/Button:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3.9, 4.05, 4.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 256 ), Vector2( 512, 256 ), Vector2( 404, 228.5 ), Vector2( 440, 256 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("main_page/settings:rect_position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4, 4.2, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 320 ), Vector2( 512, 320 ), Vector2( 350, 292.5 ), Vector2( 404, 320 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("main_page/settings:rect_scale")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4, 4.2, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 4.5, 4.5 ), Vector2( 3, 3 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("main_page/quit:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 4, 4.2, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 368 ), Vector2( 512, 368 ), Vector2( 350, 340.5 ), Vector2( 404, 368 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("main_page/quit:rect_scale")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 4, 4.2, 4.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1e-05, 1e-05 ), Vector2( 4.5, 4.5 ), Vector2( 3, 3 ) ]
}

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleAnim" type="AnimationPlayer" parent="."]
anims/open_game = SubResource( 1 )

[node name="main_page" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Button" type="Button" parent="main_page"]
margin_left = 440.0
margin_top = 256.0
margin_right = 488.0
margin_bottom = 276.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings" type="Button" parent="main_page"]
margin_left = 404.0
margin_top = 320.0
margin_right = 476.0
margin_bottom = 340.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "SETTINGS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quit" type="Button" parent="main_page"]
margin_left = 404.0
margin_top = 368.0
margin_right = 476.0
margin_bottom = 388.0
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 1 )
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anim_objects" type="Node2D" parent="main_page"]

[node name="Player_right" type="Sprite" parent="main_page/anim_objects"]
position = Vector2( 640, 472 )
rotation = -6.28319
scale = Vector2( 16, 16 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 10, 0, 8, 10 )

[node name="Label" type="Label" parent="main_page"]
margin_left = 256.0
margin_top = 75.0
margin_right = 384.001
margin_bottom = 91.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
text = "1-Bit Game"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="settings_page" type="NinePatchRect" parent="."]
margin_top = 616.0
margin_right = 1024.0
margin_bottom = 1224.0
texture = ExtResource( 4 )
region_rect = Rect2( 432, 48, 48, 48 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 8
patch_margin_bottom = 8
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="settings_page"]
margin_left = 12.0
margin_top = 12.0
margin_right = 84.0
margin_bottom = 28.0
rect_scale = Vector2( 4, 4 )
theme = ExtResource( 1 )
text = "SETTINGS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="settings_page"]
margin_left = 12.0
margin_top = 96.0
margin_right = 524.0
margin_bottom = 596.0
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FS" type="Label" parent="settings_page/VBoxContainer"]
margin_right = 512.0
margin_bottom = 16.0
theme = ExtResource( 1 )
text = "FullScreen"

[node name="FullScreen" type="CheckBox" parent="settings_page/VBoxContainer/FS"]
margin_left = 96.0
margin_right = 120.0
margin_bottom = 24.0
theme = ExtResource( 1 )
pressed = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="settings_page"]
margin_left = 16.0
margin_top = 560.0
margin_right = 52.0
margin_bottom = 580.0
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 1 )
text = "BACK"

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="main_page/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="main_page/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="main_page/quit" to="." method="_on_quit_pressed"]
[connection signal="toggled" from="settings_page/VBoxContainer/FS/FullScreen" to="." method="_on_FullScreen_toggled"]
[connection signal="pressed" from="settings_page/back" to="." method="_on_back_pressed"]
